# alpine-chess-social

./: .gitignore  ACHIEVEMENTS.md  ANALYSIS_INTEGRATION_PLAN.md  CLAUDE.md  PLANNING.md  SCALE_OPTIMIZATION.md  aws_plan.md  aws_todo.md  customHttp.yml  mate.md  todo.md
.github/workflows/: deploy-backend.yml  deploy-worker.yml
backend/: main.py  requirements.txt
backend-rust/: .dockerignore  Cargo.toml  backfill_opening_stats.sql  deploy-worker.sh  deploy.sh
backend-rust/.cargo/: config.toml
backend-rust/crates/analysis-worker/: Cargo.toml  Dockerfile
backend-rust/crates/analysis-worker/src/: analyzer.rs  book_cache.rs  castling_mate.rs  config.rs  db.rs  en_passant_mate.rs  error.rs  king_mate.rs  lib.rs  main.rs  queen_sac.rs  rook_sac.rs  smothered_mate.rs  sqs.rs  stockfish.rs
backend-rust/crates/analysis-worker/src/puzzle/: cook.rs
backend-rust/crates/analysis-worker/src/tactics/: attacks.rs  side_attacks.rs  simple.rs
backend-rust/crates/chess-analyzers/: Cargo.toml
backend-rust/crates/chess-analyzers/src/: analyzer_trait.rs  lib.rs  unified.rs
backend-rust/crates/chess-analyzers/src/analyzers/: back_rank_mate.rs  best_game.rs  biggest_comeback.rs  capture_sequence.rs  castle_mate.rs  clutch_win.rs  en_passant_mate.rs  hung_queen.rs  king_mate.rs  king_walk.rs  knight_bishop_mate.rs  knight_fork.rs  knight_promotion_mate.rs  longest_game.rs  mod.rs  pawn_mate.rs  promotion_mate.rs  queen_sacrifice.rs  quickest_mate.rs  rook_sacrifice.rs  smothered_mate.rs  stalemate.rs  windmill.rs
backend-rust/crates/chess-core/: Cargo.toml
backend-rust/crates/chess-core/src/: game_data.rs  lib.rs  opening_tree.rs  pgn.rs  tcn.rs
backend-rust/crates/chess-puzzler/: COMPARISON_REPORT.md  Cargo.toml  README.md
backend-rust/crates/chess-puzzler/src/: analysis.rs  board_utils.rs  endgame.rs  lib.rs
backend-rust/crates/chess-puzzler/src/puzzle/: cook.rs  extraction.rs  mod.rs
backend-rust/crates/chess-puzzler/src/tactics/: line_geometry.rs  mate_patterns.rs  material.rs  mod.rs  pins.rs  positional.rs  zugzwang.rs
backend-rust/crates/migration-tool/: Cargo.toml
backend-rust/crates/migration-tool/src/: main.rs
backend-rust/crates/server/: Cargo.toml  Dockerfile
backend-rust/crates/server/src/: book_cache.rs  config.rs  error.rs  lib.rs  main.rs
backend-rust/crates/server/src/auth/: jwt.rs  middleware.rs  password.rs
backend-rust/crates/server/src/clients/: chess_com.rs  lichess.rs  mod.rs  sqs.rs
backend-rust/crates/server/src/db/: accounts.rs  analysis.rs  games.rs  mod.rs  opening_moves.rs  opening_tree.rs  pool.rs  posts.rs  titled_players.rs  trainer.rs  trainer_maia.rs  trainer_trees.rs  users.rs
backend-rust/crates/server/src/routes/: analysis_ws.rs  auth.rs  dashboard.rs  endgame.rs  games.rs  health.rs  mod.rs  opening_book.rs  opening_tree.rs  posts.rs  profile.rs  puzzles.rs  titled_players.rs  trainer.rs  trainer_maia.rs  trainer_trees.rs
backend-rust/data/: README.md
backend-rust/src/: lib.rs
backend-rust/tests/: auth_test.rs  classify_test.rs  endgame_test.rs  titled_players_test.rs
backend-rust/tests/common/: mod.rs
backend-rust/tests/data/: lichess_puzzles_10k.csv
backend/src/: auth.py  chess_com_client.py  database.py  game_data.py  lichess_client.py  opening_tree.py  pgn_parser.py  replay_helper.py  tcn_decoder.py  unified_analyzer.py
backend/src/analyzers/: __init__.py  back_rank_mate.py  best_game.py  biggest_comeback.py  capture_sequence.py  castle_mate.py  clutch_win.py  en_passant_mate.py  hung_queen.py  king_mate.py  king_walk.py  knight_bishop_mate.py  knight_fork.py  knight_promotion_mate.py  longest_game.py  pawn_mate.py  promotion_mate.py  queen_sacrifice.py  quickest_mate.py  rook_sacrifice.py  smothered_mate.py  stalemate.py  windmill.py
docs/: AWS_INFRASTRUCTURE.md  CHESS_COM_API.md  opening-book.md
front-end-migration/: index.html
frontend/: STYLE_GUIDE.md  STYLING_GUIDE.md  index.html  package-lock.json  package.json  serve.py  tailwind.config.js  vite.config.ts
frontend/js/: analysis.js  auth.js  config.js  dashboard.js  endgames.js  games.js  libs.js  maia.js  maia_trainer.js  profile.js  puzzles.js  shared.js  trainer.js  trainer_trees.js
frontend/models/maia/: maia-1100.onnx  maia-1200.onnx  maia-1300.onnx  maia-1400.onnx  maia-1500.onnx  maia-1600.onnx  maia-1700.onnx  maia-1800.onnx  maia-1900.onnx
frontend/public/sounds/: README.md
frontend/src/: App.tsx  index.css
frontend/src/components/: EditProfileModal.tsx
frontend/src/config/: api.ts
frontend/src/hooks/: index.ts  useStockfish.ts
frontend/src/pages/: AchievementsPage.tsx  DashboardPage.tsx  EndgameAnalyticsPage.tsx  GamePage.tsx  GamesPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  OpeningLinePage.tsx  (+7 more)
lichess-eval-db/: generate_puzzles.py
trainer-generator/: generate_hard_moves.py  generate_puzzles.py
trainer-generator/data/: maia_positions_evans.json
trainer-generator/tools/: upload_maia_position.py  upload_puzzles.py  upload_tree.py
(+36 files in other folders)
