[package]
name = "alpine-chess-tests"
version = "0.0.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/chess-core",
    "crates/chess-puzzler",
    "crates/analysis-worker",
]

[dev-dependencies]
chess_puzzler = { path = "crates/chess-puzzler" }
chess = "3.2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
bcrypt = "0.16"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Chess
shakmaty = "0.27"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Async streams
futures = "0.3"

# Misc
dotenvy = "0.15"
regex = "1"
bincode = "1"

# AWS SDK
aws-config = "1"
aws-sdk-sqs = "1"
aws-sdk-batch = "1"
aws-sdk-secretsmanager = "1"
num_cpus = "1.16"
