[package]
name = "analysis-worker"
version = "0.1.0"
edition = "2021"

[lib]
name = "analysis_worker"
path = "src/lib.rs"

[[bin]]
name = "analysis-worker"
path = "src/main.rs"

[[bin]]
name = "classify-openings"
path = "src/bin/classify_openings.rs"


[dependencies]
# Workspace dependencies
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }

# AWS SDK
aws-config = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
num_cpus = { workspace = true }

# Local crates
chess-core = { path = "../chess-core" }

# Chess
chess = "3.2"
shakmaty = { workspace = true }

# Binary serialization for opening book
bincode = { workspace = true }
