[package]
name = "migration-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }

# SQLite source
rusqlite = { version = "0.31", features = ["bundled"] }
