[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
bcrypt = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true }
dotenvy = { workspace = true }
regex = { workspace = true }

chess-core = { path = "../chess-core" }
chess-analyzers = { path = "../chess-analyzers" }
chess_puzzler = { path = "../chess-puzzler" }
shakmaty = { workspace = true }
futures = { workspace = true }
